0.19
  * Fix bug where gearman util would create duplicate output.
  * Update sqlite queue so that it uses a prepared statement.
  * Fixes a number cases where server was not initializing default values
  internally correctly.

0.18 Tue Mar 15 13:32:33 PDT 2011
  * Bug fix for compile when no plugins are requested.
  * Bug fix where during startup using Drizzle or MySQL the server could crash.
  * Bug fix to make sure test programs will run if NULL sized objects are sent.


0.17 Tue Mar  8 08:27:04 PST 2011
  * gearadmin added, easy access to shutdown, version, and verbose commands
  on the server.
  * Bug fixes related to CLI.
  * Bug fixes related to Memcached support.
  * Bug fixes related to Drizzle support.
  * Dependency on boost now required for build.
  * Drizzle queue module expects that a schema named "gearmand" exists.
  * Fix copyright headers were needed.

0.16 Tue Feb 22 10:55:33 PST 2011
  * Fixed cases where silent failure of server for queues would not cause tests to fail.
  * Fix for failure when setsockopt() failed on new connection.
  * Fixed silen exit in client library based on signals.
  * Error log now reports failure location in compiled code for ERROR conditions.
  * Fix for failover.
  * Fixed issue in client where it would silently die based on signal issues.
  * "verbose" has been added to the string protocol. It allows you to see
    what the verbose setting is.

0.15 Mon Feb 14 18:44:32 PST 2011
  * Numerous issues around overflow on buffers are now fixed.
  * Updates on gearmand daemon to share a bit more code.
  * Numerious fixes for gearman command line client.
  * IPV6 fix for server.

0.14 Wed Jun 30 13:04:39 PDT 2010
  * Leak in SQLite resolved.
  * updated build configs
  * Increased testting.

0.13 Sun Apr  4 14:45:08 PDT 2010
 * Fix for bug #518512.
 * Use OR REPLACE syntax for inserting items into the sqlite.
 * Changed default bitfield optimize setting to only be off for Solaris.
 * Refactoring on server.