@@ -6,27 +6,8 @@
  * the COPYING file in the parent directory for full text.
  */
 
-/**
- * @file
- * @brief Gearman Declarations
- */
-
-#ifndef __GEARMAN_CORE_H__
-#define __GEARMAN_CORE_H__
+#pragma once
 
 #include <libgearman/universal.h>
 #include <libgearman/command.h>
 #include <libgearman/packet.h>
-#include <libgearman/connection.h>
-#include <libgearman/log.h>
-
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-
-#ifdef __cplusplus
-}
-#endif
-
-#endif /* __GEARMAN_CORE_H__ */
