@@ -15,7 +15,6 @@ nobase_include_HEADERS+= \
 			 libgearman/client.h \
 			 libgearman/command.h \
 			 libgearman/configure.h \
-			 libgearman/connection.h \
 			 libgearman/constants.h \
 			 libgearman/core.h \
 			 libgearman/gearman.h \
@@ -31,6 +30,7 @@ nobase_include_HEADERS+= \
 
 noinst_HEADERS+= \
 		 libgearman/common.h \
+		 libgearman/connection.h \
 		 libgearman/log.h
 
 noinst_LTLIBRARIES+= libgearman/libgearmancore.la
