@@ -11,8 +11,8 @@
  * @brief Gearman State Definitions
  */
 
-#include "common.h"
-
+#include <libgearman/common.h>
+#include <libgearman/log.h>
 
 void gearman_log(gearman_universal_st *state, gearman_verbose_t verbose,
                  const char *format, va_list args)
