@@ -11,7 +11,9 @@
  * @brief Task Definitions
  */
 
-#include "common.h"
+#include <libgearman/common.h>
+#include <libgearman/connection.h>
+#include <libgearman/packet.h>
 
 /*
  * Public Definitions
