@@ -21,6 +21,7 @@
 #define GEARMAN_CORE
 
 #include <libgearman/gearman.h>
+#include <libgearman/connection.h>
 
 #include "libtest/test.h"
 #include "libtest/server.h"
